Improved look of navbar, fixed error where GitHub repo links not showing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 /* Styles for code snippets */
 
 .snippet {
@@ -10,4 +12,11 @@
 
 .references_section {
     padding-top: 20px;
+}
+
+/* navbar title text */
+.titleText {
+    font-family: 'Russo One', sans-serif;
+    margin-left: 20px;
+    font-style: italic;
 }
